[package]
name = "apinotes"
# Remember to update html_root_url in lib.rs
version = "0.0.1"
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2021"

description = "Parsing clang API notes"
keywords = ["api-notes", "clang", "swift", "apple"]
categories = ["config", "parser-implementations"]
readme = "README.md"
repository = "https://github.com/madsmtm/apinotes"
documentation = "https://docs.rs/apinotes/"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
